--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "lint": "echo '----- Checking Frontend...' && prettier --debug-check . && eslint --ext .jsx . && echo '----- Done!'",
-    "format": "prettier --write . && eslint --fix --ext .jsx .",
+    "lint": "eslint --ext .jsx .",
+    "check:prettier": "prettier --debug-check .",
+    "format": "prettier --write .",
     "docker:build": "dotenv -- cross-var docker build --build-arg VITE_HS_API_KEY=%VITE_HS_API_KEY% --tag deckforge:latest --progress plain .",
     "docker:run": "docker run --name deckforge -p 4000:80 -d deckforge:latest",
     "docker:stop": "docker stop deckforge",
