--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -3,6 +3,8 @@ steps:
 - name: 'gcr.io/cloud-builders/docker'
   args:
   - 'build'
+  - '--build-arg'
+  - 'VITE_HS_API_KEY=${VITE_HS_API_KEY}'
   - '-t'
   - '${_SERVICE_REGION}-docker.pkg.dev/$PROJECT_ID/${_REPOSITORY}/${_IMAGE_NAME}'
   - '.'
@@ -29,6 +31,11 @@ images:
 - '${_SERVICE_REGION}-docker.pkg.dev/$PROJECT_ID/${_REPOSITORY}/${_IMAGE_NAME}'
 
 timeout: 1000s
+
+availableSecrets:
+  secretManager:
+  - versionName: projects/$PROJECT_ID/secrets/VITE_HS_API_KEY/versions/latest
+    env: 'VITE_HS_API_KEY'
 
 options:
   logging: CLOUD_LOGGING_ONLY
