--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -4,7 +4,7 @@ steps:
   args:
   - 'build'
   - '--build-arg'
-  - 'VITE_HS_API_KEY=${VITE_HS_API_KEY}'
+  - 'VITE_HS_API_KEY=${PROD_HS_API_KEY}'
   - '-t'
   - '${_SERVICE_REGION}-docker.pkg.dev/$PROJECT_ID/${_REPOSITORY}/${_IMAGE_NAME}'
   - '.'
@@ -34,8 +34,8 @@ timeout: 1000s
 
 availableSecrets:
   secretManager:
-  - versionName: projects/$PROJECT_ID/secrets/VITE_HS_API_KEY/versions/latest
-    env: 'VITE_HS_API_KEY'
+  - versionName: projects/$PROJECT_ID/secrets/PROD_HS_API_KEY/versions/latest
+    env: 'PROD_HS_API_KEY'
 
 options:
   logging: CLOUD_LOGGING_ONLY
