--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -7,7 +7,7 @@ steps:
   - 'docker'
   - 'build'
   - '--build-arg'
-  - 'VITE_HS_API_KEY=${PROD_HS_API_KEY}'
+  - 'VITE_HS_API_KEY=$$VITE_HS_API_KEY'
   - '-t'
   - '${_SERVICE_REGION}-docker.pkg.dev/$PROJECT_ID/${_REPOSITORY}/${_IMAGE_NAME}'
   - '.'
@@ -39,7 +39,7 @@ timeout: 1000s
 availableSecrets:
   secretManager:
   - versionName: projects/$PROJECT_ID/secrets/PROD_HS_API_KEY/versions/latest
-    env: 'PROD_HS_API_KEY'
+    env: 'VITE_HS_API_KEY'
 
 options:
   logging: CLOUD_LOGGING_ONLY
