--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -11,7 +11,7 @@ steps:
   - '-t'
   - '${_SERVICE_REGION}-docker.pkg.dev/$PROJECT_ID/${_REPOSITORY}/${_IMAGE_NAME}'
   - '.'
-  secretEnv: ['PROD_HS_API_KEY']
+  secretEnv: ['VITE_HS_API_KEY']
 
 # Push the container image to Container Registry
 - name: 'gcr.io/cloud-builders/docker'
