--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -4,13 +4,11 @@ steps:
   entrypoint: 'bash'
   args:
   - '-c'
-  - 'docker'
-  - 'build'
-  - '--build-arg'
-  - 'VITE_HS_API_KEY=$$VITE_HS_API_KEY'
-  - '-t'
-  - '${_SERVICE_REGION}-docker.pkg.dev/$PROJECT_ID/${_REPOSITORY}/${_IMAGE_NAME}'
-  - '.'
+  - |
+    docker build \
+      --build-arg VITE_HS_API_KEY=$$VITE_HS_API_KEY \
+      -t ${_SERVICE_REGION}-docker.pkg.dev/$PROJECT_ID/${_REPOSITORY}/${_IMAGE_NAME} \
+      .
   secretEnv: ['VITE_HS_API_KEY']
 
 # Push the container image to Container Registry
